k8s/orders/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: orders-network-policy
  namespace: retail-store-ns
spec:
  podSelector:
    matchLabels:
      app: orders
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ui
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - podSelector:
        matchLabels:
          app: checkout
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: orders-db
    ports:
    - protocol: TCP
      port: 5432
  - to:
    - podSelector:
        matchLabels:
          app: orders-mq
    ports:
    - protocol: TCP
      port: 5672
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: orders-db-network-policy
  namespace: retail-store-ns
spec:
  podSelector:
    matchLabels:
      app: orders-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: orders
    ports:
    - protocol: TCP
      port: 5432
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: orders-mq-network-policy
  namespace: retail-store-ns
spec:
  podSelector:
    matchLabels:
      app: orders-mq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelec
    tor:
        matchLabels:
          app: orders
    ports:
    - protocol: TCP
      port: 5672
  egress: []
